[gd_scene load_steps=31 format=3 uid="uid://0wvr0e771pmi"]

[ext_resource type="Script" path="res://Levels/control.gd" id="1_x0dxh"]
[ext_resource type="Texture2D" uid="uid://bqxnqdfsimxhw" path="res://Assets/Background2.png" id="2_pua3m"]
[ext_resource type="Texture2D" uid="uid://b6fv86oy6ygpd" path="res://Assets/gametileset2.png" id="4_0yy5x"]
[ext_resource type="Texture2D" uid="uid://l30x3iuxehrq" path="res://Assets/gametileset1.png" id="5_p83g5"]
[ext_resource type="Texture2D" uid="uid://dy1n6s1xiv3f4" path="res://Player/Lightning Mage/Run.png" id="6_6vunp"]
[ext_resource type="FontFile" uid="uid://dsl5awgy80aev" path="res://NightsideDemoRegular.ttf" id="7_05tpf"]
[ext_resource type="AudioStream" uid="uid://c3hn05h7nuvtg" path="res://Assets/Running.wav" id="7_oh60x"]
[ext_resource type="AudioStream" uid="uid://da1xylwf1t47g" path="res://OpenMusic.wav" id="8_hy7so"]
[ext_resource type="AudioStream" uid="uid://dvlacad8r88lc" path="res://ClickSound.wav" id="9_tlrey"]

[sub_resource type="Environment" id="Environment_y6nkf"]
background_mode = 3
glow_enabled = true
glow_intensity = 8.0
glow_strength = 2.0
glow_hdr_threshold = 0.9
glow_hdr_luminance_cap = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stomh"]
size = Vector2(2.95124, 2.66649)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q2l5x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lvg5b"]
atlas = ExtResource("6_6vunp")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm2si"]
atlas = ExtResource("6_6vunp")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_08xlp"]
atlas = ExtResource("6_6vunp")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_swx06"]
atlas = ExtResource("6_6vunp")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_33eg6"]
atlas = ExtResource("6_6vunp")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3248"]
atlas = ExtResource("6_6vunp")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yy34"]
atlas = ExtResource("6_6vunp")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5wlx"]
atlas = ExtResource("6_6vunp")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_aluet"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvg5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm2si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08xlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swx06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33eg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3248")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yy34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5wlx")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_ouefj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_h3p32"]
resource_name = "new_animation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1300, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ujc27"]
_data = {
"RESET": SubResource("Animation_ouefj"),
"new_animation": SubResource("Animation_h3p32")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q4843"]
radius = 123.0
height = 354.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d6rjg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e6g6p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sjrd0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3djrx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4gohf"]

[node name="OpenScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
script = ExtResource("1_x0dxh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-16, 120)
scale = Vector2(1, 1.62)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_y6nkf")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
position = Vector2(319, 205.875)
scale = Vector2(0.841872, 1.00656)
color = Color(0.556953, 0.556953, 0.556953, 1)

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(11, 196.5)
scale = Vector2(1.19912, 1.75443)
texture = ExtResource("2_pua3m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -601.0
offset_top = -177.0
offset_right = -557.0
offset_bottom = -102.0
scale = Vector2(27.8782, 9.73618)
color = Color(0, 0.152941, 0.164706, 0.623529)

[node name="Floor" type="Node" parent="."]

[node name="Gametileset2" type="Sprite2D" parent="Floor"]
position = Vector2(-794, 790)
scale = Vector2(9.28125, 9.55488)
texture = ExtResource("4_0yy5x")

[node name="Gametileset3" type="Sprite2D" parent="Floor"]
position = Vector2(-255, 795)
scale = Vector2(8.125, 8.89062)
texture = ExtResource("4_0yy5x")

[node name="Gametileset4" type="Sprite2D" parent="Floor"]
position = Vector2(800, 807.742)
scale = Vector2(9.10937, 8.79306)
texture = ExtResource("4_0yy5x")

[node name="Gametileset5" type="Sprite2D" parent="Floor"]
position = Vector2(262, 792)
scale = Vector2(8.125, 9.17073)
texture = ExtResource("4_0yy5x")

[node name="ColumnR" type="Sprite2D" parent="."]
top_level = true
position = Vector2(855, 500)
scale = Vector2(10.6875, 9.83624)
texture = ExtResource("5_p83g5")

[node name="ColumnL" type="Sprite2D" parent="."]
position = Vector2(-456.5, 169)
scale = Vector2(6.1875, 6.24479)
texture = ExtResource("5_p83g5")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(13, 245)
scale = Vector2(302.591, -41.6871)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.210507, -3.88609)
scale = Vector2(1.82371, -1.13846)
shape = SubResource("RectangleShape2D_stomh")

[node name="SettingsButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -94.0
offset_top = 230.5
offset_right = 94.0
offset_bottom = 319.5
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_q2l5x")
text = "Settings"
flat = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(-1592, 349)
scale = Vector2(5.14375, 5.24889)
sprite_frames = SubResource("SpriteFrames_aluet")
autoplay = "default"
frame_progress = 0.82641

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D/AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_ujc27")
}
autoplay = "new_animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-1627, 515)
shape = SubResource("CapsuleShape2D_q4843")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CharacterBody2D"]
stream = ExtResource("7_oh60x")
volume_db = -3.748
autoplay = true
bus = &"SoundEffects"

[node name="OpenMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_hy7so")
autoplay = true
bus = &"Music"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_tlrey")
bus = &"SoundEffects"

[node name="FirstOpen" type="Node2D" parent="."]

[node name="Logo" type="Label" parent="FirstOpen"]
modulate = Color(0.9, 0.9, 0.9, 1)
offset_left = -293.5
offset_top = -98.0
offset_right = 295.5
offset_bottom = 62.0
theme_override_colors/font_color = Color(0.960784, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 120
text = "WraithLight"

[node name="TagLine" type="Label" parent="FirstOpen"]
offset_left = -171.5
offset_top = 21.0
offset_right = 173.5
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 30
text = "Death Isnt Always The End"

[node name="QuitButton" type="Button" parent="FirstOpen"]
z_index = 1
offset_left = -63.5
offset_top = 271.5
offset_right = 36.5
offset_bottom = 360.5
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_d6rjg")
text = "Quit"
flat = true

[node name="LoadButton" type="Button" parent="FirstOpen"]
offset_left = -138.5
offset_top = 188.5
offset_right = 144.5
offset_bottom = 277.5
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6g6p")
text = "Load Game"
flat = true

[node name="PlayButton" type="Button" parent="FirstOpen"]
offset_left = -137.0
offset_top = 103.0
offset_right = 146.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_sjrd0")
text = "New Game"
flat = true

[node name="Story" type="Node2D" parent="."]
visible = false

[node name="StoryLabel" type="Label" parent="Story"]
z_index = 1
offset_left = -665.0
offset_top = -133.5
offset_right = 679.0
offset_bottom = 535.5
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
text = "Elya was a warden of Black Hollow Monastery
until the halls fell silent 
Now the dead are restless
 Use your lantern to uncover what is hidden
guide lost souls 
restore the light

Death isnt always the end"
horizontal_alignment = 1

[node name="Next" type="Button" parent="Story"]
z_index = 1
anchors_preset = -1
anchor_right = 0.017
anchor_bottom = 0.155
offset_left = -53.5
offset_top = 278.0
offset_right = 47.5
offset_bottom = 353.0
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_3djrx")
text = "Next"
flat = true

[node name="Explainer" type="Node2D" parent="."]

[node name="Play2" type="Button" parent="Explainer"]
offset_left = -42.5
offset_top = 280.0
offset_right = 42.5
offset_bottom = 335.0
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_4gohf")
text = "Play"
flat = true

[node name="Jump" type="Label" parent="Explainer"]
offset_left = -287.0
offset_top = -72.0
offset_right = -208.0
offset_bottom = -25.0
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
text = "Jump"

[node name="Space" type="Label" parent="Explainer/Jump"]
layout_mode = 0
offset_left = 489.0
offset_top = -2.0
offset_right = 575.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
text = "Space"

[node name="Move" type="Label" parent="Explainer"]
offset_left = -287.0
offset_top = 13.5
offset_right = -206.0
offset_bottom = 60.5
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
text = "Move"

[node name="Arrows" type="Label" parent="Explainer/Move"]
layout_mode = 0
offset_left = 382.0
offset_right = 574.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
text = "Arrow Keys"

[node name="Save" type="Label" parent="Explainer"]
offset_left = -287.0
offset_top = 199.5
offset_right = -215.0
offset_bottom = 246.5
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
text = "Save"

[node name="Fire" type="Label" parent="Explainer/Save"]
layout_mode = 0
offset_left = 338.0
offset_right = 574.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
text = "Rest at the fires"

[node name="Projectiles" type="Label" parent="Explainer"]
offset_left = -287.0
offset_top = 105.5
offset_right = -117.0
offset_bottom = 152.5
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
text = "Projectiles"

[node name="XCShift" type="Label" parent="Explainer/Projectiles"]
layout_mode = 0
offset_left = 396.5
offset_right = 568.5
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("7_05tpf")
theme_override_font_sizes/font_size = 35
text = "X C or Shift"

[node name="GameLose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_hy7so")
autoplay = true

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="FirstOpen/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="FirstOpen/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="FirstOpen/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Story/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Explainer/Play2" to="." method="_on_play_2_pressed"]
